<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string-array name="Pizza">
        <item>Margherita Pizza</item>
        <item>Sausage Blast Pizza</item>
        <item>Exotic BBQ Pizza</item>
        <item>Heavy Meat Pizza</item>
        <item>Cheese Shower Pizza</item>
        <item>Dual Cake Pizza</item>
        <item>Italian Pizza</item>
    </string-array>
    <string-array name="Biriyani">
        <item>Kacchi Biriyani</item>
        <item>Pakki Biriyani</item>
        <item>Beef/Kalyani Biriyani</item>
        <item>Mutton Biriyani</item>
        <item>Chicken Biriyani</item>
        <item>Jorda Biriyani</item>
        <item>Beef Tehari</item>
        <item>Morog Polao</item>
    </string-array>
    <string-array name="Special">
        <item>Fried Rice</item>
        <item>Roshogolla</item>
        <item>Kachagolla</item>
        <item>Kalai Ruti</item>
        <item>Bogurar Doi</item>
        <item>Tiler Khawja</item>
        <item>Beef-chui</item>
        <item>Pero Sandesh</item>
        <item>Mezban</item>
    </string-array>
    <string-array name="Pitha">
        <item>Bhapa Pitha</item>
        <item>Citoi Pitha</item>
        <item>Dudh-citoi Pitha</item>
        <item>Puli Pitha</item>
        <item>Dudh-puli Pitha</item>
        <item>Telebhaja Pitha</item>
        <item>Patishapta</item>
        <item>Pantua</item>
        <item>Malpoa</item>
        <item>Jamai Pitha</item>
    </string-array>
    <string-array name="Kebab">
        <item>Reshmi Kebab</item>
        <item>Boti Kebab</item>
        <item>Shik Kebab</item>
        <item>Shami Kebab</item>
        <item>Jali Kebab</item>
        <item>Tikka Kebab</item>
        <item>Dam Kebab</item>
        <item>Shuti Kebab</item>
    </string-array>
    <string-array name="Dessert">
        <item>Roshomalai</item>
        <item>Shandesh</item>
        <item>Chom chom</item>
        <item>Balish Misti</item>
        <item>Cake</item>
        <item>Naru</item>
        <item>Payesh</item>
        <item>Semai</item>
        <item>Laddu</item>
    </string-array>
    <string-array name="Category">
        <item>Biriyani</item>
        <item>Special</item>
        <item>Pitha</item>
        <item>Kebab</item>
        <item>Dessert</item>
        <item>Pizza</item>
        <item>Burger</item>
        <item>Coffee</item>
        <item>Soup</item>
        <item>Pasta</item>
        <item>Salad</item>
        <item>Noodles</item>
    </string-array>
    <string name="s1">Flavors Unleashed</string>
    <string name="s2">Moments Created</string>
    <string name="s3">Categories</string>
    <string name="category">Pizza</string>
    <string name="pizza1">Margherita Pizza</string>
    <string name="ingredient">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="download">Download Ingredient Amount List</string>
    <string name="listPizza">1. Flour\n2. Processed Cheese\n3. Baking Powder\n
        4. Dry Yeast\n5. Water\n6. Mozzarella\n7. Tomato ketchup\n8. Tomato\n9. Onions\n10. Chili Flakes\n11. Sugar\n12. Olive oil\n13. Mushrooms\n14. Capsicum (green pepper)\n15. Oregano</string>
    <string name="proPizza">Step 1: Prepare the pizza dough by mixing all-purpose flour,
        salt, and baking powder. Add olive oil to a well in the center. Activate yeast with warm water and sugar, then add it to the flour. Let the dough rise for 4-6 hours.\nStep 2: Preheat the oven to 180°C. Roll out the pizza dough into a circular base, prick it with a fork, and bake for 10 minutes.\nStep 3: Chop capsicum, onions, tomatoes, and mushrooms. Grate processed and mozzarella cheese.\nStep 4: Spread tomato ketchup on the pizza base, add processed cheese, veggies, and top with mozzarella.\nStep 5: Bake at 250°C for 10 minutes. Remove, slice, and sprinkle with oregano and chili flakes. Serve hot.\n</string>
    <string name="getStared">Get Started</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="menu_bar_image">menuBarImage</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="download_bar">DownloadBar</string>
    <string name="fav_bar_image">favBarImage</string>
    <string name="about_us">About Us</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="my_recipes">My Recipes</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="login1">" <u>Login</u>"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Create a new account. </string>
    <string name="sign_up">"Register"</string>
    <string name="register">" <u>Register</u>"</string>
    <string name="have_account">Already have an account?</string>
    <string name="message">You have Logged In</string>
    <string name="share">Share</string>
    <string name="petuk">Petuk</string>
    <string name="personal">Personal</string>
    <string name="information">Information</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Name">Name</string>
    <string name="userName">Username</string>
    <string name="logout">Logout</string>
    <string name="hello">"Hello "</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone">Contact</string>
    <string name="go_to_home">Go to Home</string>
    <string name="forget_password">Forget Password?</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="edit_password">Edit Password</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="upload_an_image_first">Upload an image first</string>
    <string name="upload_ingredient_list">Upload ingredient List (pdf)</string>
    <string name="upload_procedure">Upload Procedure (pdf)</string>
    <string name="add">Add</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="kacchiList">2 lb mutton\n1 teaspoon ginger paste\n2
        teaspoon garlic paste\n3-4 dry red chili\n2-3 stick of cinnamon, half inches each\n4-5 green cardamom\n1 teaspoon cumin\n½ teaspoon cloves\n½ teaspoon mace\n⅛ teaspoon nutmeg\n6-8 allspice (optional)\n½ teaspoon caraway seed (optional)\n3 tablespoon yogurt\n¾ cup ghee or butter\n5 medium potato\npinch of orange food color (optional)\n½ cup onion, thinly sliced\n4 cups basmati or kalijeera rice (I use a 160ml cup to measure my rice. Adjust accordingly)\n6 cups water\n½ cup condensed milk\n2 tablespoon milk\npinch of saffron\n10-12 alubokhara (pitted prunes)\n4 eggs, hard boiled\nSalt, according to taste</string>
    <string name="kacchiPro"><b>1.	Steps to prepare the meat:</b>\nSprinkle some salt on the meat and let stand for 15-20 minutes. Wash the meat and drain all water. Take all the spice from red chili to caraway seed, grind. Take the pot where biryani will be cooked. Add the meat and yogurt, ground spice mix, garlic and ginger paste and salt. Marinate for anywhere between 30 minutes to overnight (see notes).\n
        <b>2.	Steps to prepare the onion:</b>\nAdd about 3 tablespoons of butter/ghee on a frying pan on medium heat. Add very thinly sliced onion and sauté until fragrant and golden brown.\n
        <b>3.	Steps to prepare the potato:</b>\nWash, peel and cut the potato in big chinks. Usually into 3 pieces for a medium Idaho potato. If using, rub some orange food color to the potato. Sprinkle some salt. Fry the potatoes until slightly golden on the same pan used for the onion.\n
        <b>4.	Steps to prepare the rice:</b>\nWash rice and drain all water. Boil 6 cups of water. Add salt. Add the rice. Turn off the stove at the first sight of water boiling again (bubble forming on the water) after adding the rice. Rice will be uncooked at this point. Drain the rice completely saving the drained hot water in another clean pot.\n
        <b>5.	Steps to assemble the biryani layers and cook:</b>\nPreheat oven to 350 degrees Fahrenheit. Soak the saffron to the milk. Add butter/ghee to 1 cup of hot water that was set aside in the rice preparing step. Add the prepared potatoes on top of the marinated meat. Sprinkle some fried onion. Add the Alu Bokhara(prunes), if using. Add half the water-butter mixture. Layer in the prepared rice. Sprinkle the saffron milk. Make 4-5 indentations from the rice layer through the potato till the meat. Add the condensed milk through the indentations. Sprinkle the remaining water-butter mixture. Sprinkle the remaining fried onion. Add the remaining hot water in a way that water doesn’t go above the rice layer. You may not need to use all of the hot water. Cook in the oven for 1.5 hours. Add the hard-boiled eggs. Serve with salad, kebab and chutney.\n
    </string>
    <string name="pakkiIng">2 lb. (cut them in larger pieces)\nRice (uncooked): (Kalogeria or Basmati): 1 Lbs.\nPotato: 4 (cut in half – vertically)\nOnion Paste: ¾ Cup\nGinger Paste: 1 ½ TBSP (tablespoon)\nGarlic Paste: 1 TBSP (tablespoon)\n
        Yogurt: ¼ Cup\nRed Chili Powder: 1 TSP\nClove (lobongo): 4\nCardamom (Elachi): 4\nCinnamon (Darchini): 2 pieces, 1 inch each\nBay Leaf (Tej Pata): 2 small\nBiriyani Masala Mix: (Dry fry on a pan and then grind the following together to make the mix): ½ TSP each of whole Cumin, Coriander, Mace (Jaifal), Cardamom, Cloves, Black Pepper, and ¼ TSP of Mace (Jayatree or Javantri).\nMustard Oil: 2 TBSP (Tablespoon)\nVegetable Oil: 2 TBSP (Tablespoon)\n
        Salt: 2 TSP (teaspoon)\nWhole spices to cook the rice: 1 Bay Leaf, 2 Cardamom, 2 pieces of Cinnamon and 1 medium sliced onion.\nGreen Chili: 10 Pieces\nMilk: ½ Cup\nPitted Prune (Aloo Bokhara): 6 – 10 pieces\nKeora Water: 1 TSP
    </string>
</resources>