<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipes"
    android:id="@+id/sideNavigation"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F6FF"
        android:orientation="vertical"
        android:padding="@dimen/_18sdp">
        <include
            layout="@layout/toolbar3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/s1"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/s2"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/dishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/category"
            android:textColor="#0091EA"
            android:textSize="@dimen/_26ssp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/ingredientId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/ingredient"
            android:textColor="#000000"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <ScrollView
            android:id="@+id/RecipeScrollId1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/IngredientTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kacchiList"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/procedureId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/procedure"
            android:textColor="#000000"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/RecipeScrollId2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/procedureTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kacchiPro"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="VisualLintLongText" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <include
            layout="@layout/activity_fav"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>