<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CategoryName"
    android:id="@+id/sideNavigation"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F6FF"
        android:orientation="vertical"
        android:padding="20dp">

        <include
            layout="@layout/activity_toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="3sp"
            android:text="@string/s1"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/s2"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/searchBarId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round2"
            android:hint="@string/search_for_a_recipe"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="#808080"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <TextView
            android:id="@+id/categoryNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/s3"
            android:textColor="#0091EA"
            android:textSize="30sp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/GridView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="15dp"
            android:numColumns="2"
            android:verticalSpacing="15dp">

        </GridView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <include
            layout="@layout/activity_fav"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>