<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F6FF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/backgroundwithoutlogo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:src="@drawable/backgroundlogo"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_home">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_home_black_24" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_profile">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_account_circle_24" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_recipe">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/my_recipes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_restaurant_24" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_fav">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/favourites"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_star_24" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_share">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_share_24" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/nav_about">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_info_24" />

    </LinearLayout>

</LinearLayout>